--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,62 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --default-font-family: "Poppins", "sans-serif";
+  --color-backgroundColor: #0d0d0d;
+  --color-primaryAccent: #00d4ff;
+  --color-secondaryAccent: #ff007a;
+  --color-tertiaryAccent: #a16eff;
+  --color-textColor: #e0e0e0;
+  --color-textSecondaryColor: #b0b0b0;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-family: var(--default-font-family);
+  --color-background: var(--color-backgroundColor);
+  --color-foreground: var(--color-textColor);
+  --color-primary: var(--color-primaryAccent);
+  --color-secondary: var(--color-secondaryAccent);
+  --color-tertiary: var(--color-tertiaryAccent);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+  background-color: #0d0d0d;
+  color: #ffffffe9;
+
+}
+
+html.has-scroll-smooth {
+  overflow: hidden;
+}
+
+html.has-scroll-dragging {
+  user-select: none;
+}
+
+[data-scroll-container] {
+  min-height: 100vh;
+  background-color: #0e0e10;
+}
+
+/* for logo */
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.animate-gradient {
+  background-size: 200% 200%;
+  animation: gradientAnimation 3s infinite linear;
 }
